k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fscart
  labels:
    name: fscart
    istio-injection: enabled
